--- a/_includes/googleDrivePlayer.html
+++ b/_includes/googleDrivePlayer.html
@@ -1,7 +1,17 @@
 <div class="embed-container">
     <iframe
-        width="700"
-        height="480"
+        {% if include.width %}
+            width="{{ include.width }}"
+        {% else %}
+            width="700"
+        {% endif %}
+
+        {% if include.height %}
+            height="{{ include.height }}"
+        {% else %}
+            height="480"
+        {% endif %}
+
         src="https://drive.google.com/file/d/{{ include.id }}"
         frameborder="0"
         allowfullscreen="true">
